17° Commit (Implementação do Padrão Template Method)