@@ -1,9 +1,6 @@
 package test.cardapio;
 
-import main.cardapio.Ingrediente;
-import main.cardapio.IngredienteFactory;
-import main.cardapio.Lanche;
-import main.cardapio.ReceitaLanche;
+import main.cardapio.*;
 import org.junit.jupiter.api.Test;
 import java.util.ArrayList;
 import java.util.List;
@@ -16,35 +13,44 @@ class LancheTest {
         List<Ingrediente> ingredientes = new ArrayList<>();
         ingredientes.add(IngredienteFactory.getIngrediente("Pão Brioche Composite", 120, false));
         ingredientes.add(IngredienteFactory.getIngrediente("Carne Angus Composite", 280, false));
+
         Lanche lanche = new Lanche("X-Burger", 22.90f, ingredientes);
+
         assertEquals(22.90f, lanche.getPreco());
         assertEquals(400, lanche.getCalorias());
     }
 
     @Test
-    void deveCriarLancheAPartirDeReceitaComDescricaoEPrecoCorretos() throws CloneNotSupportedException {
+    void deveCriarLancheAPartirDeReceitaComDescricaoEPrecoCorretos() {
         List<Ingrediente> ingredientes = new ArrayList<>();
         ingredientes.add(IngredienteFactory.getIngrediente("Queijo Cheddar Composite", 90, true));
-        ReceitaLanche receita = new ReceitaLanche("X-Cheddar", ingredientes, 19.90f, 10);
-        Lanche lanche = new Lanche(receita.clone());
+        ReceitaLanche receita = new ReceitaLanche("X-Cheddar", ingredientes, 19.90f,
+                10, TecnicaPreparo.TRADICIONAL);
+
+        Lanche lanche = new Lanche(receita);
+
         assertEquals("X-Cheddar", lanche.getDescricao());
         assertEquals(19.90f, lanche.getPreco());
     }
 
     @Test
-    void deveManterMesmaInstanciaDeIngredienteAoCriarLancheAPartirDeReceita() throws CloneNotSupportedException {
+    void deveManterMesmaInstanciaDeIngredienteAoCriarLancheAPartirDeReceita() {
         List<Ingrediente> ingredientes = new ArrayList<>();
         Ingrediente queijo = IngredienteFactory.getIngrediente("Queijo Cheddar Flyweight", 90, true);
         ingredientes.add(queijo);
-        ReceitaLanche receita = new ReceitaLanche("X-Cheddar Flyweight", ingredientes, 19.90f, 10);
-        Lanche lanche = new Lanche(receita.clone());
-        assertSame(queijo, lanche.getIngredientes().get(0));
+        ReceitaLanche receita = new ReceitaLanche("X-Cheddar Flyweight", ingredientes, 19.90f,
+                10, TecnicaPreparo.TRADICIONAL);
+
+        Lanche lanche = new Lanche(receita);
+
+        assertSame(queijo, lanche.getIngredientes().getFirst());
     }
 
     @Test
     void deveRetornarExcecaoParaReceitaNula() {
         try {
             new Lanche((ReceitaLanche) null);
+            fail();
         } catch (IllegalArgumentException e) {
             assertEquals("A receita fornecida não pode ser nula!", e.getMessage());
         }
@@ -56,8 +62,9 @@ class LancheTest {
         ingredientes.add(IngredienteFactory.getIngrediente("Alface Composite", 5, false));
         try {
             new Lanche(null, 10.0f, ingredientes);
+            fail();
         } catch (IllegalArgumentException e) {
-            assertEquals("A descrição do item é inválida!", e.getMessage());
+            assertEquals("A descrição do item não pode ser nula ou vazia!", e.getMessage());
         }
     }
 
@@ -67,6 +74,7 @@ class LancheTest {
         ingredientes.add(IngredienteFactory.getIngrediente("Tomate Composite", 18, false));
         try {
             new Lanche("X-Salada", -1.0f, ingredientes);
+            fail();
         } catch (IllegalArgumentException e) {
             assertEquals("O preço do lanche não pode ser negativo!", e.getMessage());
         }
@@ -76,6 +84,7 @@ class LancheTest {
     void deveRetornarExcecaoParaListaIngredientesNula() {
         try {
             new Lanche("X-Tudo", 25.0f, null);
+            fail();
         } catch (IllegalArgumentException e) {
             assertEquals("A lista de ingredientes do lanche não pode ser nula ou vazia!", e.getMessage());
         }
@@ -85,6 +94,7 @@ class LancheTest {
     void deveRetornarExcecaoParaListaIngredientesVazia() {
         try {
             new Lanche("X-Tudo", 25.0f, new ArrayList<>());
+            fail();
         } catch (IllegalArgumentException e) {
             assertEquals("A lista de ingredientes do lanche não pode ser nula ou vazia!", e.getMessage());
         }
@@ -95,7 +105,9 @@ class LancheTest {
         List<Ingrediente> ingredientes = new ArrayList<>();
         ingredientes.add(IngredienteFactory.getIngrediente("Bacon Composite", 150, false));
         Lanche lanche = new Lanche("X-Bacon", 21.90f, ingredientes);
+
         lanche.getIngredientes().add(IngredienteFactory.getIngrediente("Ovo Composite", 70, false));
+
         assertEquals(1, lanche.getIngredientes().size());
     }
 }
